--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 .auth-wrapper {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +16,6 @@
   border-radius: 12px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
   text-align: center;
-  justify-content: center;  
 }
 
 .auth-container h2 {
@@ -21,13 +24,14 @@
 }
 
 .auth-container input {
-  width: 100%;
-  padding: 12px;
+    width: 100%;
+  padding: 12px 14px;
   margin-bottom: 15px;
   border-radius: 6px;
   border: none;
   outline: none;
   font-size: 14px;
+  margin-right: 10px;
 }
 
 .auth-container button {
