--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -13,6 +13,7 @@
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
   text-align: center;
   justify-content: center;  
+  margin:10px;
 }
 
 .auth-container h2 {
