--- a/client/src/pages/Signup.css
+++ b/client/src/pages/Signup.css
@@ -16,6 +16,7 @@
   border-radius: 12px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
   text-align: center;
+  margin:10px;
 }
 
 .auth-container h2 {
